# DESFramework

./: .gitignore  CMakeLists.txt  Makefile  ParallelFramework.sln  README.md  computeThread.cu  coordinatorThread.cpp  diplomatikh.sln  diplomatikh.vcxproj  framework.cpp  framework.cu  framework.h  hostfile  kernels.cpp  kernels.cu  kernels.h  main.cu  masterProcess.cpp  model.cu  mogi1.h  mogi2.h  mogi_common.h  mogi_model.h  myclass.cpp  myclass.h  okada1.h  okada2.h  okada3.h  okada_common.h  output.txt  parallelFramework  slaveProcess.cpp  test.h  test.sh  time.txt  utilities.cpp  utilities.h
data/mogi1/: displ.txt  grid1.txt  grid2.txt  grid3.txt  grid4.txt  grid5.txt  grid6.txt
data/mogi2/: displ.txt  grid1.txt  grid2.txt  grid3.txt  grid4.txt  grid5.txt  grid6.txt
data/okada1/: displ.txt  grid1.txt  grid2.txt  grid3.txt  grid4.txt  grid5.txt  grid6.txt
data/okada2/: displ.txt  grid1.txt  grid2.txt  grid3.txt  grid4.txt  grid5.txt  grid6.txt  grid7.txt
docker/: Dockerfile
src/: CMakeLists.txt  Makefile  main.cu  test.sh
src/des/: CMakeLists.txt  computeThread.cu  computeThread.h  coordinatorThread.cpp  coordinatorThread.h  cpuKernel.cpp  cpuKernel.h  definitions.h  defs.h  desf.cpp  desf.h  framework.cpp  framework.cu  framework.h  gpuKernel.cu  gpuKernel.h  kernels.cu  kernels.h  masterProcess.cpp  messaging.cpp  slaveProcess.cpp  stopwatch.cpp  stopwatch.h  types.cpp  types.h  utilities.cpp  utilities.h
src/des/scheduler/: constantScheduler.h  hrdlsScheduler.h  hrslsScheduler.h  scheduler.h  uniformScheduler.h
src/des/utilities/: utilities.cpp  utilities.h
src/models/: CMakeLists.txt
src/models/mogi/: CMakeLists.txt  mogi.h  mogi1.cpp  mogi2.cpp  mogi_common.h
src/models/okada/: CMakeLists.txt  okada.h  okada1.cpp  okada2.cpp  okada3.cpp  okada_common.h
